# digital-human-android-project

./: .gitignore  README.md  debug_ondevice_from_bin.py  export_all_for_android.sh  export_dataset_for_android.sh  export_preview_for_android.sh  requirements-server.txt  requirements.txt  test_ondevice_onnx_vs_torch.py
.github/workflows/: python-ci.yml  test-inference.yml  train-model.yml
Ultralight-Digital-Human/: bench_unet_wenet.py  datasetsss.py  debug_ondevice_android_like.py  export_ref_face_128.py  export_unet_wenet_onnx.py  export_wenet_feat_for_android.py  inference.py  run_compare_ultra_ondevice_wenet.py  run_inference_wenet.py  train.py  vis_ondevice_samples.py
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.hpp  Postprocessor.cpp  Postprocessor.hpp  Preprocessor.cpp  Preprocessor.hpp  digital_human_jni.cpp  native-lib.cpp
configs/: inference_config.yaml  mobile_config.yaml  train_config.yaml
docs/: DATA_PREPARATION.md  ONDEVICE_STREAMING_PLAN.md  ULTRALIGHT_INFERENCE_WENET.md  api-reference.md  deployment.md  development.md
scripts/: commit-and-push.sh  compare_android_server_inputs.py  compare_inference_quality.py  compare_jpeg_decode.py  compare_with_original.py  export_server_frame0.py  inference_onnx_frame0.py  init-git-repo.sh  prepare-data.sh  setup-local.ps1  setup-server.sh  sync-code.sh  train-eval.sh  verify-installation.py  verify.sh
src/: __init__.py  export_unet_ondevice_onnx.py
src/models/: __init__.py  (+4 more)
(+24 files in other folders)
